# laminardb-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_ingestion.py  bench_query.py  bench_streaming.py
docs/: ARCHITECTURE.md  FEATURES.md  FEATURE_SPEC.md  FEATURE_SPECS_ADVANCED.md  FEATURE_SPECS_CONNECTORS.md  FEATURE_SPECS_FULL.md  MAIN_CRATE_API_PROMPT.md  PYTHON_BINDING_SPEC.md  implementation-status.md
examples/: binance_signals.py  quickstart.py  streaming_analytics.py
examples/python-demo/: README.md  notebook_exploration.ipynb  portfolio_risk.py  pyproject.toml  quickstart.py  trading_signals.py
examples/python-demo/.ipynb_checkpoints/: notebook_exploration-checkpoint.ipynb
python/laminardb/: __init__.py  _laminardb.pyi  types.py
src/: async_support.rs  callback.rs  catalog.rs  checkpoint.rs  config.rs  connection.rs  conversion.rs  error.rs  execute.rs  lib.rs  metrics.rs  query.rs  stream_subscription.rs  subscription.rs  writer.rs
tests/: conftest.py  test_callback_subscription.py  test_catalog.py  test_checkpoint.py  test_config.py  test_connection.py  test_duckdb_api.py  test_errors.py  test_execute.py  test_ingestion.py  test_metrics.py  test_module_functions.py  test_query.py  test_shutdown.py  test_stream_subscription.py  test_subscription.py  test_types.py
