[package]
name = "laminardb"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Python bindings for LaminarDB streaming SQL database"
publish = false

[lib]
name = "_laminardb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311", "anyhow"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-arrow = "0.15"

arrow = { version = "57", features = ["ffi"] }
arrow-array = "57"
arrow-schema = "57"
arrow-json = "57"
arrow-csv = "57"

laminar-db = { git = "https://github.com/laminardb/laminardb.git", package = "laminar-db", features = ["api"] }

tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
parking_lot = "0.12"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
